fix solution section

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -775,162 +775,170 @@
         </div>
         <!-- End Of Section Heading -->
 
-        <div class="row">
-          <div class="col-lg-6 col-sm-12">
-            <div class="single_solution transtion mb-3">
-              <div class="icon">
-                <img src="./images/icon-network.svg" alt="" />
+        <ol class="list-inline mb-0 row">
+          <li class="col-lg-6 col-sm-12">
+            <a href="" class="mb-4">
+              <div class="single_solution transtion">
+                <div class="icon">
+                  <img src="./images/icon-network.svg" alt="" />
+                </div>
+                <div class="body">
+                  <h3><strong>Network</strong> icon</h3>
+                  <p>
+                    The network icon would be appropriately used here if
+                    networking represent a core aspect that is addressed by our
+                    solution offering.
+                  </p>
+                  <span class="transtion"
+                    >More about Networking
+                    <svg
+                      class="bi bi-arrow-right transtion"
+                      width="1em"
+                      height="1em"
+                      viewBox="0 0 16 16"
+                      fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                        clip-rule="evenodd"
+                      />
+                      <path
+                        fill-rule="evenodd"
+                        d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                        clip-rule="evenodd"
+                      />
+                    </svg>
+                  </span>
+                </div>
               </div>
-              <div class="body">
-                <h3><strong>Network</strong> icon</h3>
-                <p>
-                  The network icon would be appropriately used here if
-                  networking represent a core aspect that is addressed by our
-                  solution offering.
-                </p>
-                <span class="transtion"
-                  >More about Networking
-                  <svg
-                    class="bi bi-arrow-right transtion"
-                    width="1em"
-                    height="1em"
-                    viewBox="0 0 16 16"
-                    fill="currentColor"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
-                      clip-rule="evenodd"
-                    />
-                    <path
-                      fill-rule="evenodd"
-                      d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                </span>
-              </div>
-            </div>
-          </div>
+            </a>
+          </li>
           <!--End Of col-sm-6-->
-          <div class="col-lg-6 col-sm-12">
-            <div class="single_solution transtion mb-3">
-              <div class="icon">
-                <img src="./images/icon-windows.svg" alt="" />
+          <li class="col-lg-6 col-sm-12">
+            <a href="#" class="mb-4">
+              <div class="single_solution transtion">
+                <div class="icon">
+                  <img src="./images/icon-windows.svg" alt="" />
+                </div>
+                <div class="body">
+                  <h3><strong>Windows</strong> icon</h3>
+                  <p>
+                    These blocks are meant to discuss features or benefits that
+                    users would be able to leverage by using the provided service
+                    or product.
+                  </p>
+                  <span class="transtion"
+                    >Explore more
+                    <svg
+                      class="bi bi-arrow-right transtion"
+                      width="1em"
+                      height="1em"
+                      viewBox="0 0 16 16"
+                      fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                        clip-rule="evenodd"
+                      />
+                      <path
+                        fill-rule="evenodd"
+                        d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                        clip-rule="evenodd"
+                      />
+                    </svg>
+                  </span>
+                </div>
               </div>
-              <div class="body">
-                <h3><strong>Windows</strong> icon</h3>
-                <p>
-                  These blocks are meant to discuss features or benefits that
-                  users would be able to leverage by using the provided service
-                  or product.
-                </p>
-                <span class="transtion"
-                  >Explore more
-                  <svg
-                    class="bi bi-arrow-right transtion"
-                    width="1em"
-                    height="1em"
-                    viewBox="0 0 16 16"
-                    fill="currentColor"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
-                      clip-rule="evenodd"
-                    />
-                    <path
-                      fill-rule="evenodd"
-                      d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                </span>
-              </div>
-            </div>
-          </div>
-          <!--End Of col-sm-6-->
-
-          <div class="col-lg-6 col-sm-12">
-            <div class="single_solution transtion mb-3">
-              <div class="icon">
-                <img src="./images/icon-robot.svg" alt="" />
-              </div>
-              <div class="body">
-                <h3><strong>Robot</strong> icon</h3>
-                <p>
-                  If we offered something by way of robotic solutions or
-                  automation tooling, we would talk about its benefits in this
-                  section.
-                </p>
-                <span class="transtion"
-                  >Explore automation
-                  <svg
-                    class="bi bi-arrow-right transtion"
-                    width="1em"
-                    height="1em"
-                    viewBox="0 0 16 16"
-                    fill="currentColor"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
-                      clip-rule="evenodd"
-                    />
-                    <path
-                      fill-rule="evenodd"
-                      d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                </span>
-              </div>
-            </div>
-          </div>
+            </a>
+          </li>
           <!--End Of col-sm-6-->
 
-          <div class="col-lg-6 col-sm-12">
-            <div class="single_solution transtion mb-3">
-              <div class="icon">
-                <img src="./images/icon-shield.svg" alt="" />
+          <li class="col-lg-6 col-sm-12">
+            <a href="#" class="mb-4">
+              <div class="single_solution transtion">
+                <div class="icon">
+                  <img src="./images/icon-robot.svg" alt="" />
+                </div>
+                <div class="body">
+                  <h3><strong>Robot</strong> icon</h3>
+                  <p>
+                    If we offered something by way of robotic solutions or
+                    automation tooling, we would talk about its benefits in this
+                    section.
+                  </p>
+                  <span class="transtion"
+                    >Explore automation
+                    <svg
+                      class="bi bi-arrow-right transtion"
+                      width="1em"
+                      height="1em"
+                      viewBox="0 0 16 16"
+                      fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                        clip-rule="evenodd"
+                      />
+                      <path
+                        fill-rule="evenodd"
+                        d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                        clip-rule="evenodd"
+                      />
+                    </svg>
+                  </span>
+                </div>
               </div>
-              <div class="body">
-                <h3><strong>Shield</strong> icon</h3>
-                <p>
-                  We could say something meaningful about security in this
-                  section, or change the icon and title and talk about a more
-                  relevant topic altogether.
-                </p>
-                <span class="transtion"
-                  >More about Security
-                  <svg
-                    class="bi bi-arrow-right transtion"
-                    width="1em"
-                    height="1em"
-                    viewBox="0 0 16 16"
-                    fill="currentColor"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
-                      clip-rule="evenodd"
-                    />
-                    <path
-                      fill-rule="evenodd"
-                      d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
-                      clip-rule="evenodd"
-                    />
-                  </svg>
-                </span>
-              </div>
-            </div>
-          </div>
+            </a>
+          </li>
           <!--End Of col-sm-6-->
-        </div>
+
+          <li class="col-lg-6 col-sm-12">
+            <a href="#" class="mb-4">
+              <div class="single_solution transtio">
+                <div class="icon">
+                  <img src="./images/icon-shield.svg" alt="" />
+                </div>
+                <div class="body">
+                  <h3><strong>Shield</strong> icon</h3>
+                  <p>
+                    We could say something meaningful about security in this
+                    section, or change the icon and title and talk about a more
+                    relevant topic altogether.
+                  </p>
+                  <span class="transtion"
+                    >More about Security
+                    <svg
+                      class="bi bi-arrow-right transtion"
+                      width="1em"
+                      height="1em"
+                      viewBox="0 0 16 16"
+                      fill="currentColor"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+                        clip-rule="evenodd"
+                      />
+                      <path
+                        fill-rule="evenodd"
+                        d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                        clip-rule="evenodd"
+                      />
+                    </svg>
+                  </span>
+                </div>
+              </div>
+            </a>
+          </li>
+          <!--End Of col-sm-6-->
+        </ol>
       </div>
     </section>
     <!-- End Of Solution Section -->
