fix integrations section

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -1237,126 +1237,103 @@
     <section class="integrations_section">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-sm-10 offset-sm-1">
-            <div class="integration_left_info">
-              <h3>Provide a punchy one-liner</h3>
-              <p>
+
+          <div class="col-lg-4 col-md-12 col-sm-12">
+            <div class="section_header_wrapper integration_left_info">
+              <h2 class="heading_title">
+                Provide a punchy one-liner
+              </h2>
+              <p class="heading_desc">
                 This is where one describes the one-liner in more detail. If the
                 one-liner is about integrations, talk about why those
                 integrations are supported. Focus on what the benefit to the
                 end-user is.
               </p>
-              <a href="#"
-                >Explore
-                <svg
-                  class="bi bi-arrow-right transtion"
-                  width="1em"
-                  height="1em"
-                  viewBox="0 0 16 16"
-                  fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    fill-rule="evenodd"
+              <a href="#" class="heading_link transtion">Explore
+                <svg class="bi bi-arrow-right transtion" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd"
                     d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
-                    clip-rule="evenodd"
-                  />
-                  <path
-                    fill-rule="evenodd"
-                    d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
-                    clip-rule="evenodd"
-                  />
+                    clip-rule="evenodd" />
+                  <path fill-rule="evenodd" d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z" clip-rule="evenodd" />
                 </svg>
               </a>
             </div>
           </div>
-          <div class="col-lg-8 col-sm-12">
-            <div class="integration_logo_list">
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-sat.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-1nezer0.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-a2z.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-sat.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-1nezer0.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-a2z.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-sat.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-1nezer0.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-a2z.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-sat.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-1nezer0.png" alt="" />
-                  </a>
-                </div>
-              </div>
-              <div class="integration_logo">
-                <div class="logo">
-                  <a href="#">
-                    <img src="./images/highlights-a2z.png" alt="" />
-                  </a>
-                </div>
-              </div>
-            </div>
+          
+          <div class="col-lg-8 col-md-12 col-sm-12">
+            <ul class="integration_logo_list list-inline mb-0">
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-sat.png" alt="" />
+                </a>
+              </li>
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-1nezer0.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-a2z.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-sat.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-1nezer0.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-a2z.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-sat.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-1nezer0.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-a2z.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-sat.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-1nezer0.png" alt="" />
+                </a>
+              </li>
+
+              <li class="integration_logo">
+                <a href="#" class="logo">
+                  <img src="./images/highlights-a2z.png" alt="" />
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
