Fix Call to Action

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -1344,19 +1344,19 @@
     <section class="call_to_action_section">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="call_to_action_title">
               <h3>Ready to get started?</h3>
             </div>
           </div>
-          <div class="col-md-9">
+          <div class="col-md-8">
             <div class="call_to_action_info">
               <p>
                 Request a demo or talk to a solutions consultant to explore
                 options to address your problems.
               </p>
               <div class="content_and_link">
-                <a href="#" class="sale_btn">Contact</a>
+                <a href="#" class="sale_btn">Contact Sales</a>
                 <a href="#" class="demo">Request Demo</a>
               </div>
             </div>
