fix Social Icon

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -1400,6 +1400,30 @@
       </div>
       <!-- End of newsletter -->
 
+      <!-- Start of newsletter -->
+      <div class="newsletter_wrapper newsletter_wrapper_mobile">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="newsletter_info">
+                <form action="">
+                  <input type="text" class="from-control" placeholder="Email Address" />
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1" />
+                    <label class="form-check-label" for="defaultCheck1">
+                      I agree to the <a href="#">Privacy Policy</a>
+                    </label>
+                  </div>
+                  <button>Subscribe to Newsletter</button>
+                  
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of newsletter -->
+
       <!-- Start of Social Wrapper -->
       <div class="social_wrapper">
         <div class="container">
