--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -826,8 +826,8 @@
                   <h3><strong>Windows</strong> icon</h3>
                   <p>
                     These blocks are meant to discuss features or benefits that
-                    users would be able to leverage by using the provided service
-                    or product.
+                    users would be able to leverage by using the provided
+                    service or product.
                   </p>
                   <span class="transtion"
                     >Explore more
@@ -1237,7 +1237,6 @@
     <section class="integrations_section">
       <div class="container">
         <div class="row">
-
           <div class="col-lg-4 col-md-12 col-sm-12">
             <div class="section_header_wrapper integration_left_info">
               <h2 class="heading_title">
@@ -1249,18 +1248,31 @@
                 integrations are supported. Focus on what the benefit to the
                 end-user is.
               </p>
-              <a href="#" class="heading_link transtion">Explore
-                <svg class="bi bi-arrow-right transtion" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd"
+              <a href="#" class="heading_link transtion"
+                >Explore
+                <svg
+                  class="bi bi-arrow-right transtion"
+                  width="1em"
+                  height="1em"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
                     d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
-                    clip-rule="evenodd" />
-                  <path fill-rule="evenodd" d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z" clip-rule="evenodd" />
+                    clip-rule="evenodd"
+                  />
+                  <path
+                    fill-rule="evenodd"
+                    d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z"
+                    clip-rule="evenodd"
+                  />
                 </svg>
               </a>
             </div>
           </div>
-          
+
           <div class="col-lg-8 col-md-12 col-sm-12">
             <ul class="integration_logo_list list-inline mb-0">
               <li class="integration_logo">
@@ -1407,15 +1419,23 @@
             <div class="col-md-12">
               <div class="newsletter_info">
                 <form action="">
-                  <input type="text" class="from-control" placeholder="Email Address" />
+                  <input
+                    type="text"
+                    class="from-control"
+                    placeholder="Email Address"
+                  />
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1" />
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="defaultCheck1"
+                    />
                     <label class="form-check-label" for="defaultCheck1">
                       I agree to the <a href="#">Privacy Policy</a>
                     </label>
                   </div>
                   <button>Subscribe to Newsletter</button>
-                  
                 </form>
               </div>
             </div>
