Increase navbar mobile-to-desktop threshold

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -37,7 +37,7 @@
 
     <!-- Header Start -->
     <header class="header">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-xl">
         <a class="navbar-brand" href="#">Landing Page</a>
         <button
           class="navbar-toggler"
