Rename deck id and class names

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -966,24 +966,24 @@
           <div class="product_list">
             <ul class="list-inline mb-0">
               <li class="product_menu_item">
-                <a href="#overview" class="overviewLink current">overview</a>
+                <a href="#deck-0" class="deck-1 current">start</a>
               </li>
               <li class="product_menu_item">
-                <a href="#provision" class="provisionLink">provision</a>
+                <a href="#deck-1" class="deck-1">one</a>
               </li>
               <li class="product_menu_item">
-                <a href="#secure" class="secureLink">secure</a>
+                <a href="#deck-2" class="deck-2">two</a>
               </li>
               <li class="product_menu_item">
-                <a href="#connect" class="connectLink">connect</a>
+                <a href="#deck-3" class="deck-3">three</a>
               </li>
               <li class="product_menu_item">
-                <a href="#run" class="runLink">run</a>
+                <a href="#deck-4" class="deck-4">four</a>
               </li>
             </ul>
           </div>
           <div class="product_details_area">
-            <section id="overview" class="product_details_wrapper">
+            <section id="deck-0" class="product_details_wrapper">
               <div class="product_details">
                 <h3>The Landing Page Stack</h3>
                 <p>
@@ -993,7 +993,7 @@
                 </p>
               </div>
             </section>
-            <section id="provision" class="product_details_wrapper">
+            <section id="deck-1" class="product_details_wrapper">
               <div class="product_details">
                 <h3>One</h3>
                 <p>
@@ -1060,7 +1060,7 @@
                 </ul>
               </div>
             </section>
-            <section id="secure" class="product_details_wrapper">
+            <section id="deck-2" class="product_details_wrapper">
               <div class="product_details">
                 <h3>Two</h3>
                 <p>
@@ -1128,7 +1128,7 @@
                 </ul>
               </div>
             </section>
-            <section id="connect" class="product_details_wrapper">
+            <section id="deck-3" class="product_details_wrapper">
               <div class="product_details">
                 <h3>Three</h3>
                 <p>
@@ -1195,7 +1195,7 @@
                 </ul>
               </div>
             </section>
-            <section id="run" class="product_details_wrapper">
+            <section id="deck-4" class="product_details_wrapper">
               <div class="product_details">
                 <h3>Four</h3>
                 <p>
@@ -1216,27 +1216,27 @@
           <div class="product_img_list">
             <ul class="list-inline mb-0">
               <li>
-                <a href="#overview" class="product_img active">
+                <a href="#deck-0" class="product_img active">
                   <img src="./images/stack.png" alt="" />
                 </a>
               </li>
               <li>
-                <a href="#provision" class="product_img">
+                <a href="#deck-1" class="product_img">
                   <img src="./images/stack-0.png" alt="" />
                 </a>
               </li>
               <li>
-                <a href="#secure" class="product_img">
+                <a href="#deck-2" class="product_img">
                   <img src="./images/stack-1.png" alt="" />
                 </a>
               </li>
               <li>
-                <a href="#connect" class="product_img">
+                <a href="#deck-3" class="product_img">
                   <img src="./images/stack-2.png" alt="" />
                 </a>
               </li>
               <li>
-                <a href="#run" class="product_img">
+                <a href="#deck-4" class="product_img">
                   <img src="./images/stack-3.png" alt="" />
                 </a>
               </li>
@@ -1412,7 +1412,7 @@
               </div>
               
             </section>
-            <section id="connect" class="product_details_wrapper">
+            <section id="deck-3" class="product_details_wrapper">
               <div class="product_details">
                 <h3>Three</h3>
                 <p>
@@ -1480,7 +1480,7 @@
               </div>
               
             </section>
-            <section id="run" class="product_details_wrapper">
+            <section id="deck-4" class="product_details_wrapper">
               <div class="product_details">
                 <h3>Four</h3>
                 <p>
@@ -1505,8 +1505,8 @@
             </div>
 
             <div class="product_img">
-                <img src="./images/stack-0.png" alt="" />
-              </div>
+              <img src="./images/stack-0.png" alt="" />
+            </div>
 
             <div class="product_img">
               <img src="./images/stack-1.png" alt="" />
