Generalize deck highlight logic

--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -855,7 +855,7 @@
             <section
               id="overview"
               class="product_details_wrapper"
-              data-appear-left-offset="1600"
+              data-appear-top-offset="-180"
             >
               <div class="product_details">
                 <h3>Landing Stack</h3>
@@ -869,7 +869,7 @@
             <section
               id="provision"
               class="product_details_wrapper"
-              data-appear-left-offset="1600"
+              data-appear-top-offset="-180"
             >
               <div class="product_details">
                 <h3>One</h3>
@@ -940,7 +940,7 @@
             <section
               id="secure"
               class="product_details_wrapper"
-              data-appear-left-offset="1600"
+              data-appear-top-offset="-180"
             >
               <div class="product_details">
                 <h3>Two</h3>
@@ -1012,7 +1012,7 @@
             <section
               id="connect"
               class="product_details_wrapper"
-              data-appear-left-offset="1600"
+              data-appear-top-offset="-180"
             >
               <div class="product_details">
                 <h3>Three</h3>
@@ -1083,7 +1083,7 @@
             <section
               id="run"
               class="product_details_wrapper"
-              data-appear-left-offset="1600"
+              data-appear-top-offset="-180"
             >
               <div class="product_details">
                 <h3>Four</h3>
