--- a/landingcorp/index.html
+++ b/landingcorp/index.html
@@ -39,7 +39,12 @@
     <!-- Header Start -->
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">Landing Page</a>
+        <a class="navbar-brand" href="#">
+          <span class="logo"
+            ><img src="./images/icon-192-black.png" alt="logo"
+          /></span>
+          <span class="wordmark">Landing Page</span>
+        </a>
         <button
           class="navbar-toggler collapsed"
           type="button"
